# living-map

./: .gitignore  CLAUDE.md  Dockerfile  FRAME_AUTHORING_CASEBOOK.md  FRAME_AUTHORING_STANDARDS.md  FRAME_STRESS_TESTS_LINEAR_FUNCTIONS.md  STARTUP.md  checkpoint.sh  deploy.sh  grade-1-2-oa-nbt.tex  living_map.db  living_map.db.bak_addrecognize_20260604_110803  living_map.db.bak_predupe_20260604_103554  living_map.db.bak_remove082_20260604_105231  living_map.live.db  nixpacks.toml  publish.sh  pyproject.toml  railway.toml  restore.sh  snapshot.sh  update_seed.py
archive/: README.md  archive_deleted_sandbox_linear-functions-trial_20260624.db
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: AnnotationsList.tsx  App.tsx  DAGView.tsx  MathDomainsView.tsx  SidePanel.tsx  TopologyDiagnosticsView.tsx  api.ts  index.css  main.tsx  types.d.ts
living_map/: __main__.py  ai_service.py  app.py  dal.py  database.py  document_parser.py  frame_engine.py  graph_store.py  models.py  sandboxes.py  seed_loader.py  seed_loader_cop.py  staging_dal.py  staging_dashboard.html  topology.py  topology_diagnostics.py  topology_plots.py
migrations/: 001_composite_schema_pk.py  002_dedupe_staged_edges.py
tests/: test_commit.py  test_frame_delete.py  test_ingest.py  test_reload.py  test_sandboxes.py  test_staging.py
