[project]
name = "living-map"
version = "0.1.0"
description = "Living Map — Knowledge Map and Mathematical Structure Map system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "networkx>=3.0",
    "openpyxl>=3.1",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
    "gudhi>=3.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.24"]
